bubba-frontend (2.4~pre27) hugo vincent; urgency=low

  * fix dialog buttons in disk raid js (Closes: #1828)

 -- Carl Fürstenberg <carl@excito.com>  Fri, 13 Jan 2012 13:27:55 +0100

bubba-frontend (2.4~pre26) hugo vincent; urgency=low

  * Remove dash as a legal character for tor nickname.

 -- Carl Fürstenberg <carl@excito.com>  Thu, 12 Jan 2012 14:27:44 +0100

bubba-frontend (2.4~pre25) hugo vincent; urgency=low

  * updating copyright file to include information about Tor collaboration
    (Closes: #1805)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 15:49:45 +0100

bubba-frontend (2.4~pre24) vincent hugo; urgency=low

  * update german translations (Closes: #1816)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 04 Jan 2012 17:49:03 +0100

bubba-frontend (2.4~pre23) vincent hugo; urgency=low

  * Add original favicon (Closes: #1826)
  * Adding Swedish message cataloges

 -- Carl Fürstenberg <carl@excito.com>  Mon, 09 Jan 2012 14:46:37 +0100

bubba-frontend (2.4~pre22) vincent hugo; urgency=low

  * change node to relay (Closes: #1801)
  * remove rouge characters (Closes: #1823)
  * Fix logic in bridge and private bridge code (Closes: #1821)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 03 Jan 2012 15:10:25 +0100

bubba-frontend (2.4~pre21) vincent hugo; urgency=low

  * add special case for home page resolver id return (Closes: #1815)
  * syntax error in ajax_status (Closes: #1691)
  * Syntax error in downloads (Closes: #1819)
  * Use the system model get_timezone function (Closes: #1812)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 02 Jan 2012 17:35:24 +0100

bubba-frontend (2.4~pre20) vincent hugo; urgency=low

  * Update wizard strings
  * Include the wizard header as an h2 header in body (Closes: #1810)
  * Fix syntax error in JS code for software update

 -- Carl Fürstenberg <carl@excito.com>  Tue, 20 Dec 2011 16:57:08 +0100

bubba-frontend (2.4~pre19) vincent; urgency=low

  * readding missing tor controller