@@ -1,3 +1,9 @@
+bubba-frontend (2.4~pre28) hugo vincent; urgency=low
+
+  * Fix model loading from model backup (Closes: #1831)
+
+ -- Carl Fürstenberg <carl@excito.com>  Mon, 16 Jan 2012 13:11:37 +0100
+
 bubba-frontend (2.4~pre27) hugo vincent; urgency=low
 
   * fix dialog buttons in disk raid js (Closes: #1828)
